# SaitekTrimwheel

./: .gitattributes  .gitignore  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  SaitekTrimwheel.cpp  cmake.sysinfo.txt  getopt.c  resource.h
